--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         .footer-icons {
             margin-top: 50px
         }
-        
         /*.container {
             border: 2px dotted green;
         }
@@ -80,26 +79,34 @@
             </div>
         </div>
     </nav>
-
+    <hr>
+    <hr>
     <!--this container is to hold EVERYTHING-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
                 <div class="jumbotron">
-                    <h1>iDog Tunes!</h1>
-                    <p>Get your personalised dog tunes online</p>
-                    <a href="http://stackup.sg/" class="btn btn-primary btn-lg">Click me</a>
+                    <h1> <em>iDog</em>Tunes! <i class="fa fa-mobile fa-lg"></i></h1>
+                    <p> <em>Get awesome bark tones online</em></p>
+                    <a href="https://youtu.be/nqelBMLz9Po" class="btn btn-primary btn-lg">Free Demo</a>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                <div class="thumbnail">
+                    <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSLshuZKR8Bgl4uEbXQg77WNyEhwWTeg3XJ0zkcqI0cDcTTerqWMg" class="img-rounded">
+
+                    <h4 class="text-center text-danger">Don't leave home without one!</h4>
                 </div>
             </div>
         </div>
 
     </div>
-    <hr>
     <!--end of first row-->
     <!---row2: header-->
     <div class="row">
-         <h3 class="text-center text-primary">Bark Tunes Categories</h3>
+        <h3 class="text-center text-primary">Bark Tone Categories</h3>
     </div>
     <!--row2: thumbnails-->
     <div class="row">
@@ -109,7 +116,7 @@
                 <div class="caption">
                     <h3>Fierce Tones</h3>
                     <p>
-                        <em>Danes<br> 
+                        <em>Great Danes<br> 
                         Mastiffs<br> 
                         Great Pyrenees</em>
                     </p>
@@ -148,13 +155,15 @@
 
 
     </div>
-    <hr>
     <!--end of thumbnails-->
     <!--row 3: embeded video-->
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
-            <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-xs-12 
+                    col-sm-6 col-sm-offset-3
+                    col-md-6 col-md-offset-3
+                    col-lg-6 col-lg-offset-3">
+            <h4 class="text-info">Sample Tones</h4>
+            <div class="embed-responsive embed-responsive-4by3 img-rounded">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/EEm3LT1vZiQ"></iframe>
             </div>
 
@@ -193,11 +202,6 @@
                                 <input type="radio" name="gender" value="female"> Female
                             </label>
                         </div>
-                        <div class="radio">
-                            <label>
-                                <input type="radio" name="gender" value="Other"> Other
-                            </label>
-                        </div>
 
                         <input type="submit" class="btn btn-primary">
 
@@ -208,12 +212,17 @@
         </div>
 
         <!--col2: form-->
-        <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 text-center">
-            <h1 class="text-primary">Signup to get the latest iDog Tunes</h1>
+        <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-primary">Signup to get the latest <em>iDog</em> bark tones</h2>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum, exercitationem. Aliquid ab maxime assumenda
-                molestias dolorem officiis quidem, esse nobis sit provident voluptas amet vero, unde ut, natus, delectus
-                tempore!
+            <p class="text-justify">
+                Sign up and receive the latest bark tones from our rare dog breeds.
+
+                <p class="text-justify">All <em>iDog</em> bark tones are recorded "live" in our dog studio located at Blk 79 Ayer Rajah Crescent
+                    #02-09.
+                </p>
+
+                <p class="text-justify">Bring your pet for a "live" recording. All pets are welcomed!</p>
 
             </p>
 
@@ -262,9 +271,9 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="list-group">
-                        <a class="list-group-item" href="https://www.google.com.sg/"><i class="fa fa-home fa-fw"></i>&nbsp; Google</a>
-                        <a class="list-group-item" href="https://www.nlb.gov.sg/"><i class="fa fa-book fa-fw"></i>&nbsp; Library</a>
-                        <a class="list-group-item" href="http://stories.barkpost.com/15-dog-lover-apps/"><i class="fa fa-pencil fa-fw"></i>&nbsp; Dog Stories</a>
+                        <a class="list-group-item" href="https://www.google.com.sg/"><i class="fa fa-paw fa-fw"></i>&nbsp; Pet Resources</a>
+                        <a class="list-group-item" href="https://www.nlb.gov.sg/"><i class="fa fa-book fa-fw"></i>&nbsp; Interesting Dog Stories</a>
+                        <a class="list-group-item" href="http://stories.barkpost.com/15-dog-lover-apps/"><i class="fa fa-pencil fa-fw"></i>&nbsp; Our Partners</a>
 
                     </div>
                 </div>
